Stop YouTube embeds overflowing content
See https://github.com/WordPress/gutenberg/pull/57834

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -677,3 +677,18 @@ pre {
 		}
 	}
 }
+
+.embed-youtube {
+	position: relative;
+	max-width: 100%;
+	// Maintain aspect ratio.
+	padding-top: 56.25%;
+
+	.youtube-player {
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		top: 0;
+		left: 0;
+	}
+}
